@@ -1,3 +1,8 @@
+2002-07-24  Gary Thomas  <gary@chez-thomas.org>
+
+	* src/viper.S: 
+	* cdl/hal_powerpc_viper.cdl: More choices for system clock.
+
 2002-07-22  Gary Thomas  <gary@chez-thomas.org>
 
 	* src/viper.S: 
